--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -115,6 +115,17 @@
     </div>
     </div>
 
+    <br>
+
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Title</h5>
+            <div>Hello world</div>
+            <a href="#" class="btn btn-primary">Open</a>
+        </div>
+
+    </div>
+
 </main>
 
 {{!--
