--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -145,9 +145,9 @@
 
     <hr>
 
-    <section class="col-12">
-        <div class="row g-5">
-            <div class="col-6">
+    <section>
+        <div class="row">
+            <div class="col-6 g-2">
                 {{#with rest}}
                 {{#each cards}}
                 <div class="card">
@@ -165,15 +165,16 @@
                 </div>
                 {{/each}}
                 {{/with}}
+                <br>
             </div>
         </div>
     </section>
 
     <hr>
 
-    <section class="col-12">
-        <div class="row g-5">
-            <div class="col-6">
+    <section>
+        <div class="row">
+            <div class="col-6 g-3">
                 {{#with proposition}}
                 <div class="display-2">{{title}}</div>
                 {{#each card}}
@@ -194,44 +195,57 @@
         </div>
     </section>
 
-    {{#with footer}}
-    <h5>{{title}}</h5>
-    <section class="row">
-        <ul>
-            {{#each navigation}}
-            <li class="list-group-item">
-                <div class="col-3">
 
-                    <button class="btn btn-link"><a href="{{href}}">{{text}}</a></button>
+    <section>
+        {{#with footer}}
+        <h5>{{title}}</h5>
+        <div class="container text-start">
+            <div class="row row-col-12">
+                <table>
+                    {{#each navigation}}
+                    <div class="col g-3">
+                        <tr>
+                            <th><button class="btn btn-link"><a href="{{href}}">{{text}}</a></button></th>
+                        </tr>
+                    </div>
+                    {{/each}}
+                </table>
+            </div>
+        </div>
 
+        <div class="container text-start">
+            <div class="container text-start">
+                <div class="row row-col-12">
+                    <table>
+                        {{#each socialMedia}}
+                        <div class="col g-3">
+                            <tr>
+                                <th><button class="btn btn-dark"><a href="{{link}}">{{name}}</a></button></th>
+                            </tr>
+                        </div>
+                        {{/each}}
+                    </table>
                 </div>
-            </li>
-            {{/each}}
+            </div>
+        </div>
 
-            {{#each socialMedia}}
-            <li class="list-group-item">
-                <div class="col-3">
-
-
-                    <button class="btn btn-dark"><a href="{{link}}">{{name}}</a></button>
-
+        <div class="container text-start">
+            <div class="container text-start">
+                <div class="row row-col-12">
+                    <table>
+                        {{#each partners}}
+                        <div class="col g-3">
+                            <tr>
+                                <th><button class="btn btn-outline-info"><a href="{{link}}">{{name}}</a></button></th>
+                            </tr>
+                        </div>
+                        {{/each}}
+                    </table>
                 </div>
-            </li>
-            {{/each}}
-
-            {{#each partners}}
-            <li class="list-group-item">
-                <div class="col-3">
-
-                    <button class="btn btn-outline-info"><a href="{{link}}">{{name}}</a></button>
-
-                </div>
-            </li>
-            {{/each}}
-        </ul>
+            </div>
+        </div>
+        {{/with}}
     </section>
-    {{/with}}
-
 </main>
 {{!--
 Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
