--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -36,22 +36,20 @@
     <h2>{{city.title}}</h2>
     <br>
     {{#with city}}
-    {{#each cards}}
-    <section class="col-12">
-        <div class="row gx-2 gy-2">
-            <div class="col-5">
-                <div class="card">
-                    <div class="card-body">
-                        <img class="card-img-top" src="{{picture.src}}" alt="{{picture.alt}}">
-                        <h5 class="card-title text-bg-primary">{{title}}</h5>
-                        <p class="text-bg-secondary">{{description}}</p>
-                        <button class="btn btn-primary btn-lg"><a href="{{button.href}}">{{button.text}}</a></button>
-                    </div>
+    <div class="row gx-2 gy-2">
+        {{#each cards}}
+        <div class="col-6">
+            <div class="card">
+                <div class="card-body">
+                    <img class="card-img-top" src="{{picture.src}}" alt="{{picture.alt}}">
+                    <h5 class="card-title text-bg-primary">{{title}}</h5>
+                    <p class="text-bg-secondary">{{description}}</p>
+                    <button class="btn btn-primary btn-lg"><a href="{{button.href}}">{{button.text}}</a></button>
                 </div>
             </div>
         </div>
-    </section>
-    {{/each}}
+        {{/each}}
+    </div>
     {{/with}}
 
     <section>
@@ -88,164 +86,163 @@
         {{/with}}
     </section>
 
+    <hr>
 
-    <section class="col-12">
-        <div class="row g-5">
-            <div class="col-4">
-                {{#with gallery}}
-                <h2>{{title}}</h2>
-                {{#each cards}}
-                <div class="card">
-                    <div class="card-header">
-                        {{name}}
-                    </div>
-                    {{#each items}}
-                    <div class="card-body">
-                        <ul>
-                            <li class="list-group-item">
-                                {{this}}
-                            </li>
-                        </ul>
-
-                    </div>
-                    {{/each}}
-
+    {{#with gallery}}
+    <h2>{{title}}</h2>
+    <div class="row g-5">
+        {{#each cards}}
+        <div class="col-4">
+            <div class="card">
+                <div class="card-header">
+                    {{name}}
+                </div>
+                {{#each items}}
+                <div class="card-body">
+                    <ul>
+                        <li class="list-group-item">
+                            {{this}}
+                        </li>
+                    </ul>
                 </div>
                 {{/each}}
-                {{/with}}
             </div>
         </div>
-    </section>
+        {{/each}}
+    </div>
+    {{/with}}
+    <hr>
+
+    {{#with relaxion}}
+    <div class="display-3">
+        {{title}}
+    </div>
+    <div class="row g-5">
+        {{#each cards}}
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    {{header}}
+                </div>
+                <div class="card-body">
+                    <div class="card-title">
+                        {{title}}
+                    </div>
+                    <p>{{description}}</p>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+    {{/with}}
+
 
     <hr>
 
-    <section class="col-12">
-        <div class="row g-5">
-            <div class="col-6">
-                {{#with relaxion}}
-                <div class="display-3">{{title}}</div>
-                {{#each cards}}
-                <div class="card">
-                    <div class="card-header">
-                        {{header}}
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title">
-                            {{title}}
-                        </div>
-                        <p>{{description}}</p>
-                    </div>
-
+    {{#with rest}}
+    <div class="row">
+        {{#each cards}}
+        <div class="col-6 g-2">
+            <div class="card">
+                <div class="card-header text-center">
+                    {{header}}
                 </div>
-                {{/each}}
-                {{/with}}
+                <div class="card-body text-center">
+                    <div class="card-title text-center">
+                        {{title}}
+                    </div>
+                    <p>{{description}}</p>
+                </div>
+                <button class="btn btn-primary text-center">{{button}}</button>
+                <div class="card-footer text-center">
+                    {{footer}}
+                </div>
             </div>
         </div>
-    </section>
+        {{/each}}
+    </div>
+    {{/with}}
 
     <hr>
 
-    <section>
-        <div class="row">
-            <div class="col-6 g-2">
-                {{#with rest}}
-                {{#each cards}}
-                <div class="card">
-                    <div class="card-header text-center">
-                        {{header}}
-                    </div>
-                    <div class="card-body text-center">
-                        <div class="card-title text-center">
-                            {{title}}
-                        </div>
-                        <p>{{description}}</p>
-                    </div>
-                    <button class="btn btn-primary text-center">{{button}}</button>
-                    <div class="card-footer text-center">{{footer}}</div>
+    {{#with proposition}}
+    <div class="display-2">
+        {{title}}
+    </div>
+    <div class="row">
+        {{#each card}}
+        <div class="col-6 g-3">
+            <div class="card text-bg-warning">
+                <div class="card-header text-center">
+                    {{header}}
                 </div>
-                {{/each}}
-                {{/with}}
-                <br>
+                <div class="card-body text-center">
+                    <div class="card-title text-center">
+                        {{title}}
+                    </div>
+                    <p>{{description}}</p>
+                </div>
             </div>
         </div>
-    </section>
+        {{/each}}
+    </div>
+    {{/with}}
 
     <hr>
 
-    <section>
-        <div class="row">
-            <div class="col-6 g-3">
-                {{#with proposition}}
-                <div class="display-2">{{title}}</div>
-                {{#each card}}
-                <div class="card text-bg-warning">
-                    <div class="card-header text-center">
-                        {{header}}
-                    </div>
-                    <div class="card-body text-center">
-                        <div class="card-title text-center">
-                            {{title}}
-                        </div>
-                        <p>{{description}}</p>
-                    </div>
-                </div>
-                {{/each}}
-                {{/with}}
-            </div>
-        </div>
-    </section>
 
 
-    <section>
-        {{#with footer}}
-        <h5>{{title}}</h5>
-        <div class="container text-start">
-            <div class="row row-col-12">
-                <table>
-                    {{#each navigation}}
-                    <div class="col g-3">
-                        <tr>
-                            <th><button class="btn btn-link"><a href="{{href}}">{{text}}</a></button></th>
-                        </tr>
-                    </div>
-                    {{/each}}
-                </table>
-            </div>
-        </div>
+    {{#with footer}}
+    <h5>{{title}}</h5>
 
-        <div class="container text-start">
-            <div class="container text-start">
-                <div class="row row-col-12">
-                    <table>
-                        {{#each socialMedia}}
-                        <div class="col g-3">
-                            <tr>
-                                <th><button class="btn btn-dark"><a href="{{link}}">{{name}}</a></button></th>
-                            </tr>
-                        </div>
-                        {{/each}}
-                    </table>
-                </div>
-            </div>
-        </div>
+    <div class="row">
+        {{#each navigation}}
+        <div class="col-4 g-3">
+            <table>
+                <tr>
+                    <th>
 
-        <div class="container text-start">
-            <div class="container text-start">
-                <div class="row row-col-12">
-                    <table>
-                        {{#each partners}}
-                        <div class="col g-3">
-                            <tr>
-                                <th><button class="btn btn-outline-info"><a href="{{link}}">{{name}}</a></button></th>
-                            </tr>
-                        </div>
-                        {{/each}}
-                    </table>
-                </div>
-            </div>
+                        <a href="{{href}}" class="btn btn-link">{{text}}</a>
+
+                    </th>
+                </tr>
+            </table>
         </div>
-        {{/with}}
-    </section>
+        {{/each}}
+    </div>
+
+    <div class="row">
+        {{#each socialMedia}}
+        <div class="col-4 g-3">
+            <table>
+                <tr>
+                    <th>
+
+                        <a href="{{link}}" class="btn btn-dark">{{name}}</a>
+
+                    </th>
+                </tr>
+            </table>
+        </div>
+        {{/each}}
+    </div>
+
+    <div class="row">
+        {{#each partners}}
+        <div class="col-4 g-3">
+            <table>
+                <tr>
+                    <th>
+
+                        <a href="{{link}}" class="btn btn-outline-info">{{name}}</a>
+
+                    </th>
+                </tr>
+            </table>
+        </div>
+        {{/each}}
+    </div>
+    {{/with}}
 </main>
 {{!--
 Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
