--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -10,7 +10,7 @@
         <section>
             {{> title big=true data="My education"}}
 
-            <ul>
+            <ul class="ps-5">
                 {{#each education}}
                 <li>
                     {{name}}
@@ -34,7 +34,7 @@
         <section>
             {{> title big=false data="My certificates"}}
 
-            <ul>
+            <ul class="ps-5">
                 {{#each certificates}}
                 <li>
                     {{name}} ({{id}})
