--- a/src/container/bootstrap1.hbs
+++ b/src/container/bootstrap1.hbs
@@ -97,7 +97,7 @@
         </section>
 
         <section class="col-12">
-            <div class="row g-2">
+            <div seclass="row g-2">
                 <div class="col-3">
                     <div class="card text-bg-success">
                         <div class="card-header text-center">Header</div>
