--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -4,11 +4,296 @@
 --}}
 
 <main class="p-5">
-    {{#with navigation}}
-    {{#each links}}
-    <a href="{{href}}">{{text}}</a>
-    {{/each}}
-    {{/with}}
+    <div>
+        {{#with navigation}}
+        <section class="row">
+            {{#each links}}
+            <div class="col-3">
+                <a href="{{href}}" class="btn btn-link">{{text}}</a>
+            </div>
+            {{/each}}
+        </section>
+        {{/with}}
+    </div>
+    <div>
+        <hr>
+    </div>
+    <div>
+        <h2>{{header}}</h2>
+
+        {{#with contacts_data}}
+        <div class="mt-5">
+            <h3>{{title}}</h3>
+        </div>
+        <div class="col-12">
+            <div class="row mb-5">
+                {{#each buttons}}
+                <div class="col-4 pt-1">
+                    <button
+                        class="{{#if isPrimary}} btn btn-warning {{else}} btn btn-outline-warning {{/if}}">{{text}}</button>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+
+        {{#with form}}
+        <div class="col-12">
+            <div class="row">
+
+                {{#with input}}
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with surname}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with name}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with phone}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with email}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+                {{/with}}
+            </div>
+        </div>
+
+        {{#each switch}}
+        <div class="col-12 mb-5">
+            <div class="form-check form-switch">
+                <input type="checkbox" class="form-check-input">{{text}}
+            </div>
+        </div>
+        {{/each}}
+        {{/with}}
+        {{/with}}
+
+
+
+        <div class="row mt-5 mb-5">
+            <div class="col-4 pe-5">
+                <div class="card">
+                    <div class="card-body">
+                        <button class="btn btn-success">{{action_block.[0].text}}</button>
+                        <button class="btn btn-danger">{{action_block.[1].text}}</button>
+                        <button class="btn btn-info">{{action_block.[2].text}}</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {{#with total}}
+        <div class="row mt-5 mb-5">
+            <div class="col-6 pe-5">
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table">
+                            <tr>
+                                <th>{{title}}</th>
+                            </tr>
+                            <tr>
+                                <div class="col=6">
+
+                                    <th>
+                                        {{item_list.[0].name}} {{item_list.[0].price}}<br>
+                                        {{item_list.[1].name}} {{item_list.[1].price}}<br>
+                                        {{item_list.[2].name}} {{item_list.[2].price}}<br>
+                                    </th>
+
+                                </div>
+                            </tr>
+                            <tr>
+
+                                <div class="col=6">
+
+                                    <th>
+                                        {{additional_info.[0].text}} {{additional_info.[0].value}}<br>
+                                        {{additional_info.[1].text}} {{additional_info.[1].value}}<br>
+                                        {{additional_info.[2].text}} {{additional_info.[2].value}}<br>
+                                    </th>
+
+                                </div>
+                            </tr>
+                            <tr>
+
+                                <div class="col=6">
+
+                                    <th>
+                                        {{total_price.text}} {{total_price.value}}<br>
+                                    </th>
+
+                                </div>
+                            </tr>
+                            <tr>
+                                <div class="col=6 pb-2">
+                                    <th>
+                                        <button
+                                            class="btn btn-primary text-capitalize pb-2">{{button.[0].text}}</button>
+                                    </th>
+                                </div>
+                            </tr>
+                            <div class="col=6 pb-2">
+                                <td>
+                                    <button class="btn btn-outline-primary">{{button.[1].text}}</button>
+                                </td>
+
+                            </div>
+
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/with}}
+        <div>
+            <hr>
+        </div>
+
+        {{#with delivery}}
+        <h3>{{title}}</h3>
+
+
+        <div class="col-12">
+            <div class="row">
+                <div class="card">
+                    {{#each select}}
+                    <div class="row col-6 pe-5">
+
+                        <label class="form-label">{{label}}</label>
+                        <select class="form-select form-select-sm">
+                            <option selected>{{placeholder}}</option>
+                            <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
+                            <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
+                            <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
+                            <option value="4">{{options.[3].value}} {{options.[3].text}}</option>
+                            <option value="5">{{options.[4].value}} {{options.[4].text}}</option>
+                            <option value="6">{{options.[5].value}} {{options.[5].text}}</option>
+                        </select>
+
+                    </div>
+                    {{/each}}
+
+                </div>
+            </div>
+        </div>
+        <div>
+            <hr>
+        </div>
+
+        <div class="col-12 mb-5">
+            {{#each delivery_type}}
+            <div class="form-check">
+
+                <label class="form-check-label">{{type}}</label>
+                <input type="radio" class="form-check-input">
+
+            </div>
+            {{/each}}
+        </div>
+
+        <div>
+            <hr>
+        </div>
+
+
+        {{#with payment}}
+
+        <h3>{{title}}</h3>
+
+        {{#each list}}
+        <div class="form-check">
+
+            <label class="form-check-label">{{type}}</label>
+            <input type="radio" class="form-check-input">
+
+        </div>
+        <div class="form-text">{{description}}</div>
+
+        {{/each}}
+        {{/with}}
+        <div>
+            <hr>
+        </div>
+
+        {{#with contact}}
+        <h3>{{title}}</h3>
+        <div class="col-12">
+            <div class="row">
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with surname}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with name}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with phone}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+
+
+                <div class="col-6 pt-1 pb-5">
+                    {{#with email}}
+                    <div>
+                        <label class="form-label">{{label}}</label>
+                        <input class="form-control form-text">
+                        <div class="form-text">{{caption}}</div>
+                    </div>
+                    {{/with}}
+                </div>
+                {{/with}}
+            </div>
+        </div>
+        {{/with}}
+    </div>
 </main>
 
 {{!--
