--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -292,8 +292,140 @@
                 {{/with}}
             </div>
         </div>
+
+        <div class="col-12">
+            <div class="mb-5">
+                <label class="form-label">{{coment.label}}</label>
+                <input class="form-control form-text">{{coment.placeholder}}
+            </div>
+        </div>
         {{/with}}
+
+        {{#with coupon}}
+        <h4>{{title}}</h4>
+
+        <div class="col-12">
+            <div class="row">
+                <div class="row col-6"></div>
+                {{#with select}}
+
+
+                <label class="form-label">{{availabel_coupon.label}}</label>
+                <select class="form-select form-select-sm">
+                    <option selected>{{availabel_coupon.placeholder}}</option>
+                    <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
+                    <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
+                    <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
+                </select>
+
+
+                <label class="form-label">{{friend_coupon.label}}</label>
+                <select class="form-select form-select-sm">
+                    <option selected>{{friend_coupon.placeholder}}</option>
+                    <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
+                    <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
+                    <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
+                </select>
+
+
+                {{/with}}
+            </div>
+        </div>
     </div>
+
+
+    {{#with add}}
+
+    <div class="col-12">
+        <div>
+            <label class="form-label">{{friend.label}}</label>
+            <input class="form-control form-text">
+        </div>
+        <div class="form-text">{{friend.caption}}</div>
+    </div>
+
+
+    <div class="col-12">
+        <div>
+            <label class="form-label">{{colleague.label}}</label>
+            <input class="form-control form-text">
+        </div>
+        <div class="form-text">{{colleague.caption}}</div>
+    </div>
+    {{/with}}
+    {{/with}}
+
+    <div>
+        <hr>
+    </div>
+    {{#with quiz}}
+    <h4 class="mt-5 mb-2">{{title}}</h4>
+
+    {{#with preference}}
+    <h5 class="mb-3">{{title}}</h5>
+
+    <div class="col-12 mt-2 mb-2">
+        {{#each options}}
+        <div class="form-check">
+            <label class="form-check-label">{{this}}</label>
+            <input type="radio" class="form-check-input">
+        </div>
+        {{/each}}
+    </div>
+
+    {{/with}}
+
+    <div class="col-12">
+        <div>
+            <label class="form-label">{{your_expirience.label}}</label>
+            <input class="form-control form-text">
+        </div>
+    </div>
+
+    {{#with purchase_frequency}}
+    <label class="form-label">{{label}}</label>
+    <select class="form-select">
+        <option selected>{{placeholder}}</option>
+        <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
+        <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
+        <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
+    </select>
+    {{/with}}
+
+    {{#with factors}}
+    <h5 class="mt-3 mb-3">{{title}}</h5>
+
+    <div class="col-12 mt-2 mb-2">
+        {{#each options}}
+        <div class="form-check">
+            <label class="form-check-label">{{this}}</label>
+            <input type="checkbox" class="form-check-input">
+        </div>
+        {{/each}}
+    </div>
+    {{/with}}
+
+    {{/with}}
+
+    <footer>
+        <div class="row">
+            {{#each footer}}
+            <section class="col-2">
+                <ul class="nav">
+                    {{#each this}}
+                    <li>
+                        <a href="{{link}}">{{this}}</a>
+                    </li>
+                    {{/each}}
+                </ul>
+            </section>
+            {{/each}}
+        </div>
+    </footer>
+
+    </div>
+
+
 </main>
 
 {{!--
