--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -414,7 +414,7 @@
                 <ul class="nav">
                     {{#each this}}
                     <li>
-                        <a href="{{link}}">{{this}}</a>
+                        <a href="{{link}}">{{text}}</a>
                     </li>
                     {{/each}}
                 </ul>
