--- a/src/container/bootstrap1.hbs
+++ b/src/container/bootstrap1.hbs
@@ -32,7 +32,7 @@
                 <div class="card-header">
                     <div class="display-6">Menu</div>
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group louist-grp-flush">
                     <li class="list-group-item text-bg-dark">
                         <a href="#" class="btn btn-link">Home page</a>
                     </li>
