--- a/src/container/shopcart.hbs
+++ b/src/container/shopcart.hbs
@@ -12,7 +12,11 @@
                     <section class="row">
                         {{#each links}}
                         <div class="col-4">
+                            {{#if @last}}
+                            <a href="#" class="btn btn-link disabled">{{text}}</a>
+                            {{else}}
                             <a href="{{href}}" class="btn btn-link">{{text}}</a>
+                            {{/if}}
                         </div>
                         {{/each}}
                     </section>
@@ -159,8 +163,12 @@
                     <section class="col-2">
                         <ul class="nav">
                             {{#each this}}
-                            <li>
-                                <a href="{{link}}">{{text}}</a>
+                            <li class="nav-item">
+                                {{#if @last}}
+                                <a class="nav-link disabled" href="#">{{text}}</a>
+                                {{else}}
+                                <a class="nav-link" href="{{link}}">{{text}}</a>
+                                {{/if}}
                             </li>
                             {{/each}}
                         </ul>
