--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -11,8 +11,12 @@
                     {{#with navigation}}
                     <section class="row">
                         {{#each links}}
-                        <div class="col-3">
+                        <div class="col-2">
+                            {{#if @last}}
+                            <a href="#" class="btn btn-link disabled">{{text}}</a>
+                            {{else}}
                             <a href="{{href}}" class="btn btn-link">{{text}}</a>
+                            {{/if}}
                         </div>
                         {{/each}}
                     </section>
@@ -32,21 +36,22 @@
                     <div class="mt-5">
                         <h3>{{title}}</h3>
                     </div>
-
                     <div class="row mb-5">
+
                         {{#each buttons}}
-                        <div class="col-6 pt-1">
+                        <div class="row col-6 pe-3">
                             <button
                                 class="{{#if isPrimary}} btn btn-warning {{else}} btn btn-outline-warning {{/if}}">{{text}}</button>
                         </div>
                         {{/each}}
+
                     </div>
 
-
-                    {{#with form}}
-
-                    {{#with input}}
                     <div class="row">
+                        {{#with form}}
+
+                        {{#with input}}
+
                         <div class="col-6 pt-1 pb-5">
                             {{#with surname}}
                             <div>
@@ -86,26 +91,27 @@
                             </div>
                             {{/with}}
                         </div>
-                    </div>
-                    {{/with}}
 
-                    <div>
-                        <hr>
-                    </div>
+                        {{/with}}
 
-                    {{#each switch}}
-                    <div class="col-6 mb-5">
-                        <div class="form-check form-switch">
-                            {{#if isActive}}
-                            <input type="checkbox" class="form-check-input">{{text}}
-                            {{else}}
-                            <input type="checkbox" disabled class="form-check-input">{{text}}
-                            {{/if}}
+                        <div>
+                            <hr>
                         </div>
+
+                        {{#each switch}}
+                        <div class="col-6 me-5">
+                            <div class="form-check form-switch">
+                                {{#if isActive}}
+                                <input type="checkbox" class="form-check-input">{{text}}
+                                {{else}}
+                                <input type="checkbox" disabled class="form-check-input">{{text}}
+                                {{/if}}
+                            </div>
+                        </div>
+                        {{/each}}
+                        {{/with}}
+                        {{/with}}
                     </div>
-                    {{/each}}
-                    {{/with}}
-                    {{/with}}
             </section>
 
             <div>
@@ -114,7 +120,7 @@
             </div>
 
             <section>
-                <div class="row mt-5 mb-5">
+                <div class="row">
                     <div class="row col-6 pe-5">
                         <div class="card">
                             <div class="card-body">
@@ -188,194 +194,198 @@
                 {{/with}}
 
         </section>
-        <div>
-            <hr>
-        </div>
+    </div>
+    <div>
+        <hr>
+    </div>
 
-        <section>
-            {{#with delivery}}
-            <h3 class="mb-4">{{title}}</h3>
-
+    <section>
 
 
-            <div class="card mb-3">
-                <div class="row p-3">
-                    {{#each select}}
-                    <div class="row col-6 pe-5">
 
-                        <label class="form-label">{{label}}</label>
-                        <select class="form-select form-select-sm">
-                            <option selected>{{placeholder}}</option>
-                            <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
-                            <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
-                            <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
-                            <option value="4">{{options.[3].value}} {{options.[3].text}}</option>
-                            <option value="5">{{options.[4].value}} {{options.[4].text}}</option>
-                            <option value="6">{{options.[5].value}} {{options.[5].text}}</option>
-                        </select>
+        {{#with delivery}}
+        <h3 class="mb-4">{{title}}</h3>
 
-                    </div>
-                    {{/each}}
 
-                </div>
-            </div>
 
-            <div class="col-12 mb-5">
-                {{#each delivery_type}}
-                <div class="form-check">
+        <div class="card mb-3">
+            <div class="row p-3">
+                {{#each select}}
+                <div class="row col-6 pe-5">
 
-                    <label class="form-check-label">{{type}}</label>
-                    <input type="radio" class="form-check-input">
+                    <label class="form-label">{{label}}</label>
+                    <select class="form-select form-select-sm">
+                        <option selected>{{placeholder}}</option>
+                        <option value="1">{{options.[0].value}} {{options.[0].text}}</option>
+                        <option value="2">{{options.[1].value}} {{options.[1].text}}</option>
+                        <option value="3">{{options.[2].value}} {{options.[2].text}}</option>
+                        <option value="4">{{options.[3].value}} {{options.[3].text}}</option>
+                        <option value="5">{{options.[4].value}} {{options.[4].text}}</option>
+                        <option value="6">{{options.[5].value}} {{options.[5].text}}</option>
+                    </select>
 
                 </div>
                 {{/each}}
+
             </div>
+        </div>
 
-            <div>
-                <hr>
-            </div>
-
-
-            {{#with payment}}
-
-            <h3>{{title}}</h3>
-
-            {{#each list}}
-            <div class="form-check mb-3">
+        <div class="col-12 mb-5">
+            {{#each delivery_type}}
+            <div class="form-check">
 
                 <label class="form-check-label">{{type}}</label>
                 <input type="radio" class="form-check-input">
 
             </div>
-            <div class="form-text mb-2">{{description}}</div>
-
             {{/each}}
-            {{/with}}
-            <div>
-                <hr>
-            </div>
-
-            {{#with contact}}
-            <h3>{{title}}</h3>
-            <div class="row">
-                <div class="col-6 pt-1 pb-5">
-                    {{#with surname}}
-                    <div>
-                        <label class="form-label">{{label}}</label>
-                        <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
-                        <div class="form-text">{{caption}}</div>
-                    </div>
-                    {{/with}}
-                </div>
-
-                <div class="col-6 pt-1 pb-5">
-                    {{#with name}}
-                    <div>
-                        <label class="form-label">{{label}}</label>
-                        <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
-                        <div class="form-text">{{caption}}</div>
-                    </div>
-                    {{/with}}
-                </div>
-
-                <div class="col-6 pt-1 pb-5">
-                    {{#with phone}}
-                    <div>
-                        <label class="form-label">{{label}}</label>
-                        <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
-                        <div class="form-text">{{caption}}</div>
-                    </div>
-                    {{/with}}
-                </div>
-
-
-                <div class="col-6 pt-1 pb-5">
-                    {{#with email}}
-                    <div>
-                        <label class="form-label">{{label}}</label>
-                        <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
-                        <div class="form-text">{{caption}}</div>
-                    </div>
-                    {{/with}}
-                </div>
-                {{/with}}
-            </div>
-            <div>
-                <hr>
-            </div>
-            <div class="col-12">
-                <div class="mb-3 mt-2">
-                    <label class="form-label">{{coment.label}}</label>
-                    <input type="text" placeholder="{{coment.placeholder}}" class="form-control">
-                </div>
-            </div>
-            {{/with}}
-        </section>
+        </div>
 
         <div>
             <hr>
         </div>
 
-        <section>
-            {{#with coupon}}
-            <h4>{{title}}</h4>
 
-            <div class="col-12">
-                <div class="row">
-                    <div class="row col-6"></div>
-                    {{#with select}}
+        {{#with payment}}
 
+        <h3>{{title}}</h3>
 
-                    <label class="form-label mb-3">{{availabel_coupon.label}}</label>
-                    <select class="form-select form-select-lg mb-3">
-                        <option selected>{{availabel_coupon.placeholder}}</option>
-                        <option value="1">{{availabel_coupon.options.[0].value}} {{availabel_coupon.options.[0].text}}
-                        </option>
-                        <option value="2">{{availabel_coupon.options.[1].value}} {{availabel_coupon.options.[1].text}}
-                        </option>
-                        <option value="3">{{availabel_coupon.options.[2].value}} {{availabel_coupon.options.[2].text}}
-                        </option>
-                    </select>
+        {{#each list}}
+        <div class="form-check mb-3">
 
+            <label class="form-check-label">{{type}}</label>
+            <input type="radio" class="form-check-input">
 
-                    <label class="form-label mb-3">{{friend_coupon.label}}</label>
-                    <select class="form-select form-select-sm mb-3">
-                        <option selected>{{friend_coupon.placeholder}}</option>
-                        <option value="1">{{friend_coupon.options.[0].value}} {{friend_coupon.options.[0].text}}
-                        </option>
-                        <option value="2">{{friend_coupon.options.[1].value}} {{friend_coupon.options.[1].text}}
-                        </option>
-                        <option value="3">{{friend_coupon.options.[2].value}} {{friend_coupon.options.[2].text}}
-                        </option>
-                    </select>
+        </div>
+        <div class="form-text mb-2">{{description}}</div>
 
+        {{/each}}
+        {{/with}}
+        <div>
+            <hr>
+        </div>
 
-                    {{/with}}
+        {{#with contact}}
+        <h3>{{title}}</h3>
+        <div class="row">
+            <div class="col-6 pt-1 pb-5">
+                {{#with surname}}
+                <div>
+                    <label class="form-label">{{label}}</label>
+                    <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
+                    <div class="form-text">{{caption}}</div>
                 </div>
+                {{/with}}
             </div>
-    </div>
+
+            <div class="col-6 pt-1 pb-5">
+                {{#with name}}
+                <div>
+                    <label class="form-label">{{label}}</label>
+                    <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
+                    <div class="form-text">{{caption}}</div>
+                </div>
+                {{/with}}
+            </div>
+
+            <div class="col-6 pt-1 pb-5">
+                {{#with phone}}
+                <div>
+                    <label class="form-label">{{label}}</label>
+                    <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
+                    <div class="form-text">{{caption}}</div>
+                </div>
+                {{/with}}
+            </div>
 
 
-    {{#with add}}
-
-    <div class="col-12">
-        <div>
-            <label class="form-label mb-3">{{friend.label}}</label>
-            <input type="text" placeholder="{{friend.placeholder}}" class="form-control">
+            <div class="col-6 pt-1 pb-5">
+                {{#with email}}
+                <div>
+                    <label class="form-label">{{label}}</label>
+                    <input type="text" placeholder="{{placeholder}}" class="form-control form-text">
+                    <div class="form-text">{{caption}}</div>
+                </div>
+                {{/with}}
+            </div>
+            {{/with}}
         </div>
-        <div class="form-text mb-2">{{friend.caption}}</div>
-    </div>
-
-
-    <div class="col-12">
         <div>
-            <label class="form-label mb-3">{{colleague.label}}</label>
-            <input type="text" placeholder="{{colleague.placeholder}}" class="form-control">
+            <hr>
         </div>
-        <div class="form-text mb-2">{{colleague.caption}}</div>
+        <div class="col-12">
+            <div class="mb-3 mt-2">
+                <label class="form-label">{{coment.label}}</label>
+                <input type="text" placeholder="{{coment.placeholder}}" class="form-control">
+            </div>
+        </div>
+        {{/with}}
+    </section>
+
+    <div>
+        <hr>
     </div>
-    {{/with}}
-    {{/with}}
+
+    <section>
+        {{#with coupon}}
+        <h4>{{title}}</h4>
+
+        <div class="col-12">
+            <div class="row">
+                <div class="row col-6"></div>
+                {{#with select}}
+
+
+                <label class="form-label mb-3">{{availabel_coupon.label}}</label>
+                <select class="form-select form-select-lg mb-3">
+                    <option selected>{{availabel_coupon.placeholder}}</option>
+                    <option value="1">{{availabel_coupon.options.[0].value}} {{availabel_coupon.options.[0].text}}
+                    </option>
+                    <option value="2">{{availabel_coupon.options.[1].value}} {{availabel_coupon.options.[1].text}}
+                    </option>
+                    <option value="3">{{availabel_coupon.options.[2].value}} {{availabel_coupon.options.[2].text}}
+                    </option>
+                </select>
+
+
+                <label class="form-label mb-3">{{friend_coupon.label}}</label>
+                <select class="form-select form-select-sm mb-3">
+                    <option selected>{{friend_coupon.placeholder}}</option>
+                    <option value="1">{{friend_coupon.options.[0].value}} {{friend_coupon.options.[0].text}}
+                    </option>
+                    <option value="2">{{friend_coupon.options.[1].value}} {{friend_coupon.options.[1].text}}
+                    </option>
+                    <option value="3">{{friend_coupon.options.[2].value}} {{friend_coupon.options.[2].text}}
+                    </option>
+                </select>
+
+
+                {{/with}}
+            </div>
+        </div>
+        </div>
+
+
+        {{#with add}}
+
+        <div class="col-12">
+            <div>
+                <label class="form-label mb-3">{{friend.label}}</label>
+                <input type="text" placeholder="{{friend.placeholder}}" class="form-control">
+            </div>
+            <div class="form-text mb-2">{{friend.caption}}</div>
+        </div>
+
+
+        <div class="col-12">
+            <div>
+                <label class="form-label mb-3">{{colleague.label}}</label>
+                <input type="text" placeholder="{{colleague.placeholder}}" class="form-control">
+            </div>
+            <div class="form-text mb-2">{{colleague.caption}}</div>
+        </div>
+        {{/with}}
+        {{/with}}
     </section>
 
     <div>
@@ -437,20 +447,25 @@
         <hr>
     </div>
 
-    <footer>
+    <footer class="mt-3">
         <div class="row">
             {{#each footer}}
             <section class="col-2">
                 <ul class="nav">
                     {{#each this}}
-                    <li>
-                        <a href="{{link}}">{{text}}</a>
+                    <li class="nav-item">
+                        {{#if @last}}
+                        <a class="nav-link disabled" href="#">{{text}}</a>
+                        {{else}}
+                        <a class="nav-link" href="{{link}}">{{text}}</a>
+                        {{/if}}
                     </li>
                     {{/each}}
                 </ul>
             </section>
             {{/each}}
         </div>
+
     </footer>
 
     </div>
