--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -98,21 +98,21 @@
             <button class="btn btn-outline-dark">My button</button>
             <br>
             <br>
-            <div class="card"></div>
-            <div class="card-body">
-                <button class="btn">Test button</button>
-                <button class="btn btn-primary text-capitalize">Test button</button>
-                <button class="btn btn-secondary text-lowercase">Test button</button>
-                <button class="btn btn-success">Test button</button>
-                <button class="btn btn-danger text-uppercase">Test button</button>
-                <button class="btn btn-warning">Test button</button>
-                <button class="btn btn-info">Test button</button>
-                <button class="btn btn-light">Test button</button>
-                <button class="btn btn-dark">Test button</button>
-                <button class="btn btn-link">Test button</button>
+            <div class="card">
+                <div class="card-body">
+                    <button class="btn">Test button</button>
+                    <button class="btn btn-primary text-capitalize">Test button</button>
+                    <button class="btn btn-secondary text-lowercase">Test button</button>
+                    <button class="btn btn-success">Test button</button>
+                    <button class="btn btn-danger text-uppercase">Test button</button>
+                    <button class="btn btn-warning">Test button</button>
+                    <button class="btn btn-info">Test button</button>
+                    <button class="btn btn-light">Test button</button>
+                    <button class="btn btn-dark">Test button</button>
+                    <button class="btn btn-link">Test button</button>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
     <br>
